Fix : Selection mobile désactivée pour liens navbar

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -287,7 +287,6 @@ header {
 }
 
 #header_title {
-    user-select: none;
     margin: 0;
     padding: 0;
     font-size: 3em;
@@ -380,7 +379,14 @@ nav ul {
 }
 
 nav a {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
+    outline: none;
+
     display: flex;
     align-items: center;
     text-decoration: none;
